# better-budget

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  ynab_interface.py
api/: Dockerfile  pyproject.toml
api/src/: api.py  plaid_api.py  ynab_interface.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  TransactionDashboard.js  TransactionSummary.js  TransactionsTable.css  TransactionsTable.js  index.js
